# cultural-triplets-LATAM

./: .env.example  .gitignore  README.md  production_analysis.py  pyproject.toml
config/: config.yaml
src/: cli.py
src/export/: export_csv.py  export_neo4j_tsv.py  export_parquet.py
src/extract/: mrebel_wrapper.py  mrebel_wrapper_simple.py
src/ingest/: category_scraper.py  generic_scraper.py  wiki_api.py  wiki_api_clean.py
src/normalize/: normalize_entities.py  normalize_values.py
src/preprocess/: clean_text.py  segment.py
src/quality/: __init__.py  deduplicate.py  provenance.py  quality_filter.py  validate_schema.py
src/utils/: io.py  logging.py  text.py
